--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,14 @@
 <title>
     <p>home page </p>
 </title>
+<a href="http://127.0.0.1:5000/sign_up">Sign Up</a>, <a href="http://127.0.0.1:5000/login">LogIn</a>  
 </head>
 <body>
     <h1>home page</h1>
-    <p>content</p>
+    <p>hello and wellcom to yogev shushan server
+        start here 
+    </p>
+   
+
 </body>
 </html>
