--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,112 @@
 <html>
 <head>
 <title>
-    <p>home page </p>
-</title>
-<a href="http://127.0.0.1:5000/sign_up">Sign Up</a>, <a href="http://127.0.0.1:5000/login">LogIn</a>  
+    <h1>home page</h1>  
+</title><br>
+<ul>
+    <li><a href="http://127.0.0.1:5000/sign_up">Sign Up Page</a></li>
+    <li><a href="http://127.0.0.1:5000/login">login page</a></li>
+    <li><a href="http://127.0.0.1:5000">main page</a></li>
+    <li><a href="link">name</a></li>
+    <li><a href="link">name</a></li>
+    <li><a href="link">name</a></li>
+    <li><a href="link">name</a></li>
+    <li><a href="link">name</a></li>    
+</ul><br>
+<!-- 
+padding
+margin
+float (left)
+list-style-type:
+display
+background-color
+font-weight
+text-decoration
+text-align
+text-transform
+width
+background-image
+-->
+<style>
+
+
+title{
+    
+    padding: 0px;
+    margin: 0px;
+}
+
+li{
+    float: left;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    
+    
+}
+
+ul{
+    list-style-type: none;
+    margin:  0;
+    padding: 0;
+}
+a:link, a:visited{
+    display :block;
+    width: 120px;
+    background-color: yellowgreen;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 5px;
+    
+
+}
+
+a:hover , a:active{
+    background-color: greenyellow;
+    
+}
+body{
+    text-align: left;
+    color: rgb(86, 47, 194);
+    background-color: rgb(38, 32, 32) ;  
+}
+tr{
+    color: aquamarine;
+    padding: 5px;
+    margin-right: 5px;
+}
+</style>
+ 
 </head>
 <body>
     <h1>home page</h1>
     <p>hello and wellcom to yogev shushan server
         start here 
     </p>
-   
+
+    <table>
+        <p>image collection</p>
+        <tr><img src="https://equusmagazine.com/wp-content/uploads/migrations/equus/horse-galloping-on-sand.jpg" alt="horse1" width="150" height="150" ></tr>
+        <tr><img src="https://www.thesprucepets.com/thmb/kbAjTHH-uDkwm54YapeY5vuHImo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/icelandic-horse-1178169612-bb949fbfde104e5182b30c829d57de17.jpg"
+            alt="horse" width="150" height="150" ></tr>
+    </table>
+
+    
+
+    <P>flask instraction for DebagMode </P>
+    <table>
+      <tr>flask --app proName --debug run </tr><br>
+      <tr>flask --app MyFlaskServer{.py ext file you create} --debug run</tr><br>
+      <tr>then refresh page after chinge and you got the new content </tr><br>
+    </table>
+    <p>exsamples page </p>
+    
+    
+
 
 </body>
 </html>
