--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -150,6 +150,9 @@ hr {
 <script>
 // Get the modal
 var modal = document.getElementById('id01');
+var email = document.getElementsByName('Email');
+var password = document.getElementsByName('Password')
+
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
@@ -157,6 +160,9 @@ window.onclick = function(event) {
     modal.style.display = "none";
   }
 }
+
+
+
 </script>
 
 </body>
