--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@ text-transform
 width
 background-image
 -->
-<link  rel="stylesheet" href="/templates/home.css" type="text/css">
+<link  rel="stylesheet" href="/Static/home.css" type="text/css">
 </head>
 <body>
     <h1>home page</h1>
