--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,48 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Write your comments here -->
-    <!-- hyper links -->
-    <a href="https://www.w3schools.com">Visit W3Schools</a>
-    <a href="https://www.youtube.com/@yogevshoshan">my youtube channel</a>
-    <a href="https://github.com/yogev1520">github</a>
-    <a href="discord.gg/EYn6gydUNP">invite to my discord server</a>
-    <a href="http://127.0.0.1:5000">home page</a>
-    <!-- html_5  -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="icon" type="image/x-icon" href="png_img\favicon.ico">
+  <title>tasting</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  
+  <style>
+    h1{
+        position: relative;
+        text-align: center;
+        color: rgb(85, 239, 13);
+        
+    }
+    p{
+        box-sizing: 200px;
+        padding: 5px;
+        margin: 5px;
+        color: rgb(7, 243, 7);
+    }
+    body{
+        width: 1280;
+        height: 720;
+        background-color: rgb(47, 40, 40);
+        
+        background-attachment: inherit;
+        background-position: 100%;
+        color: blue;
+        
+    }
+
+  </style>
+  
 </head>
 
-<body>
- <h1> Login page  </h1> 
+<body onload="get()">
+
+<h1> Login page  </h1> 
 <p>
-    this is login page  
+this is login page  
 </p>
 
-<p>discord user name 
-    (yogevShushanISR#5570)
-    discord channel (discord.gg/EYn6gydUNP)
+<p>discord user name <br> (yogevShushanISR#5570)
+<br>discord channel <br> (discord.gg/EYn6gydUNP)
 </p>
 <p>
-twiter user name (@Yogev_Shushan)
+twiter user name <br>(@Yogev_Shushan)
 </p>
-<p>email = yogev1520@gmail.com</p>
+<p> email = yogev1520@gmail.com</p>
 <p>cellNum = +972559729311</p>
-
-<form action="/action_page.php">
-    <label for="fname">First name:</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    <label for="lname">Last name:</label>
-    <input type="text" id="lname" name="lname"><br><br>
-    <input type="submit" value="Submit">
-</form>
-
-
-
+<textarea name="textare" id="" cols="30" rows="10"></textarea>
+<button id="submit" type="button">btn</button>
 
 </body>
+<script>
+    function onclick(
+        
+    )
+</script>
 
 
+</html>
