--- a/templates/home.html
+++ b/templates/home.html
@@ -9,18 +9,18 @@
 <!-- refrence to the home.css file were the style code -->
 
 
-<ul>
+<ul><br>
     <li><a href="http://127.0.0.1:5000/sign_up">Sign Up Page</a></li>
     <li><a href="http://127.0.0.1:5000/login">login page</a></li>
-    <li><a href="http://127.0.0.1:5000">main page</a></li>
-    <li><a href="link">name</a></li>
-    <li><a href="link">name</a></li>
-    <li><a href="link">name</a></li>
-    <li><a href="link">name</a></li>
-    <li><a href="link">name</a></li>    
+    <li><a href="http://127.0.0.1:5000">home</a></li>
+    <li><i class="fa-solid fa-house"></i><a href="link1">name</a></li>
+    <li><i class="fa-solid fa-house"></i><a href="link2">name</a></li>
+    <li><i class="fa-solid fa-house"></i><a href="link3">name</a></li>
+    <li><i class="fa-solid fa-house"></i><a href="link4">name</a></li>
+    <li><i class="fa-solid fa-house"></i><a href="link5">name</a></li>    
 </ul><br>
- <!--
-    style lest attr 
+<!--
+style lest attr 
 padding
 margin
 float (left)
@@ -53,17 +53,11 @@ background-image
 
     <P>flask instraction for DebagMode </P>
     <table>
-      <tr>flask --app proName --debug run </tr><br>
-      
-      <tr>flask --app MyFlaskServer --debug run </tr><br>
-      <tr>use the command above</tr><br>
-
-      <tr>then refresh page after chinge and you got the new content </tr><br>
+      <br><tr>flask --app proName --debug run </tr><br>
+      <br><tr>flask --app MyFlaskServer --debug run </tr><br>
+      <br><tr>use the command above</tr><br>
+      <br><tr>then refresh page after chinge and you got the new content </tr><br>
     </table>
     <p>exsamples page </p>
-    
-    
-
-
 </body>
 </html>
